.kubernetes/service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urlshortener
  labels:
    app: urlshortener
spec:
  replicas: 1 # This will be patched by overlays
  selector:
    matchLabels:
      app: urlshortener
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: urlshortener
    spec:
      serviceAccountName: urlshortener
      containers:
      - name: urlshortener
        imagePullPolicy: Always
        image: europe-west4-docker.pkg.dev/core-services-1a2b/images/urlshortener:REPLACE_VERSION
        ports:
        - containerPort: 8080
          protocol: TCP
          name: http
        - containerPort: 8081
          protocol: TCP
          name: grpc
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "2000m"
            memory: "256Mi"
        livenessProbe:
          failureThreshold: 3
          grpc:
            port: 8081
          initialDelaySeconds: 25
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 1
          grpc:
            port: 8081
          initialDelaySeconds: 25
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config-volume
          configMap:
            defaultMode: 420
            name: urlshortener-config
