.kubernetes/service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: urlshortener
  labels:
    app: urlshortener
spec:
  selector:
    app: urlshortener
  ports:
  - name: http
    port: 8080
    targetPort: http
  - name: grpc
    port: 8081
    targetPort: grpc
